
=== Misc

* Fix handling of condition method calls and Groovy `with()` method spockPull:2162[]
** This could break tests using `with()` which relied on the bug in the past spockIssue:2269[]
** Use the Spock `with(yourObject)` instead of `yourObject.with()` or prefix it `!!` to fix your test

== 2.4-M7 (2025-11-23)

=== Highlights

* Add support for Groovy 5.0 spockIssue:2196[]

=== Misc

* Improve Spock is also tested to run correctly on Java 25 LTS spockPull:2212[]
* Fix handling of `@Verify` and `@VerifyAll` spockIssue:2150[]
* Fix handling of condition method calls spockPull:2162[]
* Fix vararg handling in `SpyStatic` spockIssue:2161[]
* Fix incompatibility with JUnit 6 in OSGi environment spockIssue:2231[]
* Fix OSGi metadata by pinning the `Require-Capability:osgi.ee=JavaSE` to Java `8` spockPull:2233[]
* Fix NPE in `SpecRunHistory.sortFeatures` when duration is missing spockIssue:2234[]
* Fix `Retry` extension does not mesh with `TestAbortedException` and `PendingFeature` spockIssue:1863[]
* Fix display of caught exceptions within `verifyEach` blocks spockPull:2163[]
* Fix extensions that call `invocation.proceed()` multiple times like `@Retry` does spockIssue:1862[]
* Fix setting the whole argument array of an invocation spockPull:2240[]
* Fix `SpyStatic()` with an interaction closure throws NullPointerException spockPull:2254[]

Thanks to all the contributors to this release: Andreas Turban, Björn Kautler, Christoph Loy, Leonard Brünings, Thanos Tsiamis

== 2.4-M6 (2025-04-15)

=== Highlights

* Add support for defining condition blocks with implicit assertions in helper methods annotated with `@Verify` or `@VerifyAll` spockPull:2112[]

=== Breaking Changes

* _This affects users of the `@Snapshot` extension, only if you were using the snapshotter in parent specification classes._ +