@@ -63,6 +63,8 @@ will now require that the spec is annotated with <<parallel_execution.adoc#isola
 * Fix handling of condition method calls and Groovy `with()` method spockPull:2162[]
 ** This could break tests using `with()` which relied on the bug in the past spockIssue:2269[]
 ** Use the Spock `with(yourObject)` instead of `yourObject.with()` or prefix it `!!` to fix your test
+* Fix module testing not working due to call to JUnit internal API spockPull:2187[]
+** This also fixes the usage of Spock with JUnit 6 in OSGi environments
 
 == 2.4-M7 (2025-11-23)
 
